<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pwChangeEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/chpwd_emailid" />

    <EditText
        android:id="@+id/pwChangeEmailEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/pwChangeNewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chpwd_paswrd" />

    <EditText
        android:id="@+id/pwChangeNewEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwChangeNewText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/pwChangeSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:shadowColor="#2E0F2B"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/chpwd_submt_btn"
        android:textColor="#FBFBEF"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>